@startuml UML

top to bottom direction

class User {
  +id: Option<u32>
  +username: String
  +password: String
  +fn verify_password(&self, target_password: &String) -> bool
  +fn hash_password(password: &str) -> Result<String, bcrypt::BcryptError>
}

class Message {
  +id: u32
  +chat_id: u32
  +sender_id: u32
  +content: String
  +message_type: MessageType
  +created_at: DateTime<Utc>
}

class Chat {
  +id: u32
  +title: Option<String>
  +description: Option<String>
  +chat_type: ChatType
}

class UserChatMetadata {
    +user_id: u32
    +chat_id: u32
    +user_role: UserRole
    +messages_visible_from: DateTime<Utc>
    +messages_received_until: DateTime<Utc>
}

class Invitation {
  +id: u32
  +chat_id: u32
  +invited_id: u32
  +invitee_id: u32
  +state: InvitationStatus
}

' Repository pattern with CRUD trait
interface Crud<T, Id> <<trait>> {
  +async fn create(&self, item: T) -> Result<T, sqlx::Error>
  +async fn read(&self, id: Id) -> Result<Option<T>, sqlx::Error>
  +async fn update(&self, item: T) -> Result<T, sqlx::Error>
  +async fn delete(&self, id: Id) -> Result<(), sqlx::Error>
}

class UserRepository {
  +connection_pool: MySqlPool
  +fn new(connection_pool: MySqlPool) -> UserRepository
  +async fn find_by_username(&self, username: &String) -> Result<Option<User>, Error>
}

class MessageRepository {
  +connection_pool: MySqlPool
  +fn new(connection_pool: MySqlPool) -> Self
}

class ChatRepository {
  +connection_pool: MySqlPool
  +fn new(connection_pool: MySqlPool) -> Self
}

class UserChatMetadataRepository {
  +connection_pool: MySqlPool
  +fn new(connection_pool: MySqlPool) -> Self
}

class InvitationRepository {
  +connection_pool: MySqlPool
  +fn new(connection_pool: MySqlPool) -> Self
}

class AppState {
  +user: UserRepository
  +chat: ChatRepository
  +msg: MessageRepository
  +invitation: InvitationRepository
  +meta: UserChatMetadataRepository
  +jwt_secret: String
}

class Claims {
  +exp: usize
  +iat: usize
  +id: u32
  +username: String
}

class AppError {
  +code: StatusCode
  +message: Option<String>
  +details: Option<String>
  +fn new(code: StatusCode, message: Option<String>, err: Option<E>) -> Self
  +fn from_status(code: StatusCode) -> Self
}


enum MessageType {
  UserMessage
  SystemMessage
}

enum UserRole {
  Owner
  Admin
  Standard
}

enum InvitationStatus {
  Pending
  Accepted
  Rejected
}

enum ChatType {
  Group
  Private
}

' Relationships
UserChatMetadata "0..*" --> "1" User : belongs_to
UserChatMetadata "0..*" --> "1" Chat : metadata_for

Message "0..*" --> "1" User : sender
Message "0..*" --> "1" Chat : in_chat

Chat "0..*" --> "0..*" Invitation : has_invitations
Invitation "1" --> "1" User : invited_user
Invitation "1" --> "1" User : invited_by
Invitation "1" --> "1" Chat : target_chat

' Repository implementations
UserRepository ..|> Crud : implements
MessageRepository ..|> Crud : implements
ChatRepository ..|> Crud : implements
UserChatMetadataRepository ..|> Crud : implements
InvitationRepository ..|> Crud : implements

' App state aggregation
AppState o-- UserRepository
AppState o-- MessageRepository
AppState o-- ChatRepository
AppState o-- UserChatMetadataRepository
AppState o-- InvitationRepository

@enduml
